@@ -1,16 +1,16 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/livecd/runscript/Attic/x86-archscript.sh,v 1.5 2004/05/17 01:44:37 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/livecd/runscript/Attic/x86-archscript.sh,v 1.6 2004/05/18 02:09:57 zhen Exp $
 
 case $1 in
 	kernel)
-	;;
+		;;
 	
 	preclean)
-	;;
+		;;
 
 	clean)
-	;;
+		;;
 
 	bootloader)
 		# CDFSTYPE and loop_opts are exported from the default
@@ -77,13 +77,13 @@ case $1 in
 			echo "label memtest86" >> $icfg
 			echo "  kernel memtest86" >> $icfg
 		fi
-	;;
+		;;
 	
 	cdfs)
-	;;
+		;;
 
 	iso)
 		#this is for the livecd-final target, and calls the proper command to build the iso file
 		mkisofs -J -R -l -o  ${2} -b isolinux/isolinux.bin -c isolinux/boot.cat -no-emul-boot -boot-load-size 4 -boot-info-table -z ${clst_cdroot_path}
-	;;
+		;;
 esac
